# Shadow

./: .gitignore  .mailmap  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  LICENSE-SPEC  MAINTAINERS.md  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  SPEC.md  SUPPORT.md  TRADEMARK.md  justfile  mkdocs.yml  pricing.json  release-please-config.json  requirements-locked.txt  rust-toolchain.toml
.cargo/: audit.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
benchmarks/: hero_devops_scenario.py  primitives_perf.py  scale_drill_down.py  v25_primitives_perf.py
crates/shadow-align/: Cargo.toml  README.md
crates/shadow-align/src/: lib.rs
crates/shadow-align/tests/: cross_language_parity.rs
crates/shadow-core/: Cargo.toml
crates/shadow-core/src/: error.rs  lib.rs  python.rs
crates/shadow-core/src/agentlog/: canonical.rs  hash.rs  mod.rs  parser.rs  record.rs  writer.rs
crates/shadow-core/src/diff/: alignment.rs  axes.rs  bootstrap.rs  conformance.rs  cost.rs  drill_down.rs  embedder.rs  judge.rs  latency.rs  mod.rs  reasoning.rs  recommendations.rs  report.rs  safety.rs  semantic.rs  trajectory.rs  verbosity.rs
crates/shadow-core/src/replay/: backend.rs  engine.rs  mock.rs  mod.rs
crates/shadow-core/src/store/: fs.rs  mod.rs  schema.sql  sqlite.rs
docs/: PYPI-PUBLISHING.md  ROADMAP-TO-PRODUCTION.md  SOC2-READINESS.md  SUPPLY-CHAIN.md  changelog.md  comparison.md  index.md  lexicon.md  sample-pr-comment.md  security.md
examples/: README.md
python/: README.md  pyproject.toml  requirements-locked.txt
python/src/shadow/: __init__.py  _core.pyi  _telemetry.py  certify.py  certify_sign.py  conformal.py  cost_attribution.py  counterfactual.py  counterfactual_loop.py  errors.py  harness_diff_render.py  hierarchical.py  holdout.py  listen.py  mcp_replay.py  mcp_server.py  mine.py  multimodal_diff.py  otel.py  policy_runtime.py  replay.py  replay_loop.py  schema_watch.py  suggest_fixes.py  v02_records.py
python/src/shadow/adapters/: __init__.py  ag2.py  crewai.py  langgraph.py
python/src/shadow/align/: __init__.py  _core.py
python/src/shadow/autopr/: __init__.py  synthesis.py
python/src/shadow/baseline/: __init__.py
python/src/shadow/bisect/: __init__.py  apply.py  attribution.py  corner_scorer.py  deltas.py  design.py  render.py  runner.py
python/src/shadow/call/: __init__.py  decide.py  render.py
python/src/shadow/causal/: __init__.py  attribution.py
python/src/shadow/causal/replay/: __init__.py  openai_replayer.py  recorded.py  types.py
python/src/shadow/cli/: __init__.py  app.py
python/src/shadow/diagnose_pr/: __init__.py  attribution.py  dashboard.py  deltas.py  diffing.py  git_blame.py  live.py  loaders.py  models.py  policy.py  render.py  report.py  risk.py  runner.py  verify_fix.py
python/src/shadow/diff_py/: __init__.py  recommendations.py  scenarios.py
python/src/shadow/embeddings/: __init__.py  semantic.py
python/src/shadow/enterprise/: __init__.py  access_log.py  audit_log.py
python/src/shadow/heal/: __init__.py  classify.py  render.py
python/src/shadow/importers/: __init__.py  a2a.py  braintrust.py  langfuse.py  langsmith.py  llamaindex.py  mcp.py  openai_evals.py  otel.py  pydantic_ai.py  vercel_ai.py
python/src/shadow/inspect/: __init__.py
python/src/shadow/judge/: __init__.py  _common.py  aggregate.py  base.py  correctness.py  factuality.py  format.py  llm.py  pairwise.py  procedure.py  refusal.py  sanity.py  schema.py  tone.py
python/src/shadow/ledger/: __init__.py  brief.py  render.py  store.py  trail.py  view.py
python/src/shadow/llm/: __init__.py  anthropic_backend.py  base.py  mock.py  openai_backend.py  positional.py
python/src/shadow/ltl/: __init__.py  checker.py  compiler.py  formula.py
python/src/shadow/policy_suggest/: __init__.py  suggest.py
python/src/shadow/quickstart_data/: README.md  __init__.py  agent.py  config_a.yaml
python/src/shadow/quickstart_data/fixtures/: candidate.agentlog
python/src/shadow/redact/: __init__.py  patterns.py  redactor.py
python/src/shadow/report/: __init__.py  github_pr.py  labels.py  markdown.py  statistical_power.py  summary.py  terminal.py
python/src/shadow/scan/: __init__.py
python/src/shadow/sdk/: __init__.py  _autostart.py  instrumentation.py  session.py  tracing.py
python/src/shadow/sdk/_bootstrap/: __init__.py  sitecustomize.py
python/src/shadow/serve/: __init__.py  app.py
python/src/shadow/statistical/: __init__.py  fingerprint.py  hotelling.py  sprt.py
python/src/shadow/storage/: __init__.py  base.py  file_store.py  memory_store.py
python/src/shadow/tools/: __init__.py  base.py  novel.py  replay.py  sandbox.py  stub.py
python/tests/: __init__.py  test_a2a_importer.py  test_adapters_ag2.py  test_adapters_crewai.py  test_adapters_langgraph.py  test_agentlog_fuzz.py  test_align_library.py  test_attribution_ci.py  test_attribution_interactions.py  test_auto_instrumentation.py  test_auto_judge.py  test_autopr.py  test_autostart.py  test_baseline.py  test_bisect.py  test_bisect_render.py  test_bisect_runner.py  test_call.py  test_canary_monitor.py  test_causal.py  test_causal_extensions.py  test_causal_replay_live.py  test_causal_replay_offline.py  test_causal_replayer_embedder.py  test_certify.py  test_certify_sign.py  test_cli.py  test_conformal.py  test_core.py  test_corner_scorer.py  test_cost_anthropic_cache.py  test_cost_attribution.py  test_counterfactual.py  test_counterfactual_loop.py  test_dashboard.py  test_diagnose_pr_attribution.py  test_diagnose_pr_cli.py  test_diagnose_pr_deltas.py  test_diagnose_pr_demo_snapshot.py  test_diagnose_pr_diffing.py  (+110 more)
python/tests/live/: __init__.py  conftest.py  test_anthropic_invariants.py  test_openai_invariants.py
scripts/: build_launch_video.py  generate_sbom.sh
site/: 404.html  index.html  sitemap.xml
typescript/: .gitignore  PARITY.md  README.md  (+3 more)
typescript/native/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
typescript/native/src/: lib.rs
(+200 files in other folders)
