[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
# PyPI distribution name. The generic "shadow" was already taken on
# PyPI (an unrelated btrfs snapshot utility), so the distribution is
# published as "shadow-diff". The Python import path stays `shadow`,
# the CLI stays `shadow`, and the repo stays Shadow — only the
# `pip install` name is different.
name = "shadow-diff"
version = "1.3.0"
description = "Git-native behavioral diff and shadow deployment for LLM agents."
# Dual-licensed to match the Rust community convention (tokio, serde,
# ruff, uv). MIT keeps embedding frictionless; Apache-2.0 adds an
# explicit patent grant.
license = "MIT OR Apache-2.0"
# LICENSE files live at the workspace root; we copy them into the Python
# build context at wheel-build time (see justfile `build-wheel`) rather
# than referencing them here, because PEP 639's `license-files` glob
# doesn't support `..` paths.
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "manav8498" }]
keywords = [
    "llm",
    "agents",
    "testing",
    "observability",
    "diff",
    "regression-testing",
    "causal-attribution",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Typing :: Typed",
]
dependencies = [
    # Runtime deps — permissive ranges so shadow co-installs cleanly with
    # whatever version the user's project already has. Exact pins here used
    # to force conflicts in any non-trivial environment. Lower bounds are
    # the oldest we've verified against; upper bounds cap the next major.
    "typer>=0.15,<1.0",
    "pydantic>=2.10,<3",
    "httpx>=0.27,<1",
    "rich>=13.9,<15",
    "scikit-learn>=1.6,<2",
    "numpy>=2.2,<3",
    "pyyaml>=6.0,<7",
]

[project.urls]
Homepage = "https://github.com/manav8498/Shadow"
Documentation = "https://github.com/manav8498/Shadow#readme"
Repository = "https://github.com/manav8498/Shadow"
Issues = "https://github.com/manav8498/Shadow/issues"
Changelog = "https://github.com/manav8498/Shadow/blob/main/CHANGELOG.md"
Discussions = "https://github.com/manav8498/Shadow/discussions"
"Source Code" = "https://github.com/manav8498/Shadow"
Specification = "https://github.com/manav8498/Shadow/blob/main/SPEC.md"

[project.optional-dependencies]
# Provider SDKs — wide ranges so shadow's optional extras don't conflict
# with the user's existing pinned anthropic/openai versions. Verified
# against both the lower bound (the original pin) and the current latest
# (anthropic 0.97, openai 2.32). Upper bounds exclude the next major.
anthropic = ["anthropic>=0.40,<1"]
openai = ["openai>=1.58,<3"]
embeddings = ["sentence-transformers>=3.3,<6"]
otel = ["opentelemetry-sdk>=1.27,<2"]
serve = [
    "fastapi>=0.115,<1",
    "uvicorn>=0.32,<1",
    "websockets>=13.1,<16",
]
mcp = ["mcp>=0.9,<2"]
dev = [
    "hypothesis==6.122.1",
    "mypy==1.14.0",
    "ruff==0.8.4",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-cov==6.0.0",
    "maturin==1.13.1",
    "types-PyYAML==6.0.12.20240917",
]

[project.scripts]
shadow = "shadow.cli.app:main"

[tool.maturin]
manifest-path = "../crates/shadow-core/Cargo.toml"
module-name = "shadow._core"
features = ["extension"]
python-source = "src"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT", "SIM", "RUF"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "PT"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src/shadow"]

# Modules that depend on optional extras (fastapi / starlette / uvicorn) not
# installed in the default CI venv. When a user opts into those extras, mypy
# can check these too — but the default install shouldn't fail on missing
# stubs for deps the user explicitly didn't install.
[[tool.mypy.overrides]]
module = ["shadow.enterprise.*", "shadow.serve.*", "shadow.mcp_server"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "network: tests that hit real LLM APIs (gated by SHADOW_RUN_NETWORK_TESTS=1)",
]

[tool.coverage.run]
# Exclude modules whose tests require optional extras not installed in the
# default dev venv (pytest skips them, but their source would otherwise count
# against the denominator and push coverage below the 85% gate). Users who
# install the relevant extra and run pytest themselves still get coverage
# on these paths.
omit = [
    "*/shadow/enterprise/*",
    "*/shadow/serve/*",
    "*/shadow/embeddings/*",
    "*/shadow/otel.py",
    "*/shadow/llm/anthropic_backend.py",
    "*/shadow/llm/openai_backend.py",
    "*/shadow/importers/otel_json.py",
]

[tool.coverage.report]
# Same exclusions apply to the final report for consistency.
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]
