[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
# PyPI distribution name. The generic "shadow" was already taken on
# PyPI (an unrelated btrfs snapshot utility), so the distribution is
# published as "shadow-diff". The Python import path stays `shadow`,
# the CLI stays `shadow`, and the repo stays Shadow — only the
# `pip install` name is different.
name = "shadow-diff"
version = "1.7.2"
description = "Git-native behavioral diff and shadow deployment for LLM agents."
# Dual-licensed to match the Rust community convention (tokio, serde,
# ruff, uv). MIT keeps embedding frictionless; Apache-2.0 adds an
# explicit patent grant.
license = "MIT OR Apache-2.0"
# LICENSE files live at the workspace root; we copy them into the Python
# build context at wheel-build time (see justfile `build-wheel`) rather
# than referencing them here, because PEP 639's `license-files` glob
# doesn't support `..` paths.
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "manav8498" }]
keywords = [
    "llm",
    "agents",
    "testing",
    "observability",
    "diff",
    "regression-testing",
    "causal-attribution",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Typing :: Typed",
]
dependencies = [
    # Runtime deps — permissive ranges so shadow co-installs cleanly with
    # whatever version the user's project already has. Exact pins here used
    # to force conflicts in any non-trivial environment. Lower bounds are
    # the oldest we've verified against; upper bounds cap the next major.
    "typer>=0.15,<1.0",
    "pydantic>=2.10,<3",
    "httpx>=0.27,<1",
    "rich>=13.9,<15",
    "scikit-learn>=1.6,<2",
    "numpy>=2.2,<3",
    "pyyaml>=6.0,<7",
    # Used by the must_match_json_schema policy rule to validate
    # structured outputs and by `shadow certify` for the certificate
    # schema. Pulled by several optional extras transitively already
    # (anthropic, openai, otel) — pinning it as a direct dep makes the
    # core install path deterministic.
    "jsonschema>=4.0,<5",
]

[project.urls]
Homepage = "https://github.com/manav8498/Shadow"
Documentation = "https://github.com/manav8498/Shadow#readme"
Repository = "https://github.com/manav8498/Shadow"
Issues = "https://github.com/manav8498/Shadow/issues"
Changelog = "https://github.com/manav8498/Shadow/blob/main/CHANGELOG.md"
Discussions = "https://github.com/manav8498/Shadow/discussions"
"Source Code" = "https://github.com/manav8498/Shadow"
Specification = "https://github.com/manav8498/Shadow/blob/main/SPEC.md"

[project.optional-dependencies]
# Provider SDKs. Upper bounds are the next major above the latest
# version we run in CI (anthropic 0.40.x, openai 2.x); the auto-
# instrument layer in `shadow.sdk` patches `.create` on `Messages` /
# `AsyncMessages` / `Completions` / `AsyncCompletions` / `Responses`
# / `AsyncResponses`, and a major-version bump in either SDK is the
# point at which those class paths or signatures can move and our
# patches silently break. Users on a new major can lift the pin in
# their own pyproject and report breakage.
anthropic = ["anthropic>=0.40,<1"]
openai = ["openai>=1.58,<3"]
embeddings = ["sentence-transformers>=3.3,<6"]
otel = ["opentelemetry-sdk>=1.27,<2"]
serve = [
    "fastapi>=0.115,<1",
    "uvicorn>=0.32,<1",
    "websockets>=13.1,<16",
]
mcp = ["mcp>=0.9,<2"]
# Framework adapters. Each pulls in the minimum surface needed for the
# matching shadow.adapters.<framework> module. LangGraph's extra
# additionally brings `langchain-openai` since that's what ~80% of
# LangGraph users pick as their chat provider; users on Anthropic,
# Bedrock, etc. can layer in `langchain-anthropic` / `langchain-aws`
# alongside without conflicts — the adapter itself is provider-neutral.
langgraph = [
    "langchain-core>=0.3,<1",
    "langgraph>=1,<2",
    "langchain-openai>=0.2,<2",
]
crewai = ["crewai>=1.14,<2"]
ag2 = ["ag2>=0.9,<2"]
dev = [
    "hypothesis==6.122.1",
    "mypy==1.14.0",
    "ruff==0.8.4",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-cov==6.0.0",
    "maturin==1.13.1",
    "types-PyYAML==6.0.12.20240917",
]

[project.scripts]
shadow = "shadow.cli.app:main"

[tool.maturin]
manifest-path = "../crates/shadow-core/Cargo.toml"
module-name = "shadow._core"
features = ["extension"]
python-source = "src"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT", "SIM", "RUF"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "PT"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src/shadow"]

# Modules that depend on optional extras (fastapi / starlette / uvicorn) not
# installed in the default CI venv. When a user opts into those extras, mypy
# can check these too — but the default install shouldn't fail on missing
# stubs for deps the user explicitly didn't install.
[[tool.mypy.overrides]]
module = [
    "shadow.enterprise.*",
    "shadow.serve.*",
    "shadow.mcp_server",
    "shadow.adapters.*",
    "shadow.tools.sandbox",
]
ignore_errors = true

# `jsonschema` ships its own type info but mypy --strict still flags
# library stubs as missing on first import (the package's stub layout
# doesn't survive PEP 561 detection in some setups). Suppress the
# unhelpful "install types-jsonschema" hint — we use jsonschema's
# runtime API only and do not depend on its types in our public surface.
[[tool.mypy.overrides]]
module = ["jsonschema", "jsonschema.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "network: tests that hit real LLM APIs (gated by SHADOW_RUN_NETWORK_TESTS=1)",
]

[tool.coverage.run]
# Exclude modules whose tests require optional extras not installed in the
# default dev venv (pytest skips them, but their source would otherwise count
# against the denominator and push coverage below the 85% gate). Users who
# install the relevant extra and run pytest themselves still get coverage
# on these paths.
omit = [
    "*/shadow/enterprise/*",
    "*/shadow/serve/*",
    "*/shadow/embeddings/*",
    "*/shadow/otel.py",
    "*/shadow/llm/anthropic_backend.py",
    "*/shadow/llm/openai_backend.py",
    "*/shadow/importers/otel_json.py",
    "*/shadow/adapters/*",
    "*/shadow/mcp_server.py",
]

[tool.coverage.report]
# Same exclusions apply to the final report for consistency.
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]
