[package]
name = "shadow-align"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["llm", "agents", "alignment", "diff", "comparison"]
categories = ["development-tools::testing", "algorithms"]
description = "Reusable trace-comparison primitives for AI agents — Levenshtein trajectory distance + structural JSON diff. Standalone Rust port of `shadow.align` (Python) and `@shadow-diff/align` (TypeScript)."
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
serde_json = "1.0"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
