[package]
name = "shadow-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core parser, writer, content-addressed store, replay engine, and nine-axis behavioral differ for the Shadow tool."
documentation = "https://docs.rs/shadow-core"
# Point at the workspace-root README via a relative path (cargo resolves
# `readme` relative to the crate's Cargo.toml, not the workspace root).
readme = "../../README.md"
# Allowlist keeps the published crate small and reproducible. Anything
# not listed is excluded from `cargo publish`.
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[package.metadata.docs.rs]
features = ["python"]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "shadow_core"
crate-type = ["cdylib", "rlib"]

[features]
default = []
# `python` makes the `pyo3` crate available to shadow-core so the
# PyO3-facing code in `src/python.rs` compiles. It does NOT activate
# `extension-module`, which means `cargo test --features python` links
# libpython normally and runs as a regular test binary.
python = ["dep:pyo3", "dep:pythonize"]
# `extension` additionally enables `pyo3/extension-module`, which tells
# PyO3 to OMIT the libpython link directives — the Python interpreter
# provides those symbols at import time. This is what maturin builds.
# Do NOT run `cargo test --features extension` (or `--all-features`)
# without also overriding linker flags; the resulting binary has
# unresolved `_Py*` symbols. Use `--features python` for tests.
extension = ["python", "pyo3/extension-module"]

# Direct deps use exact (`=x.y.z`) pins per the "pin to exact versions"
# constraint in CONTRIBUTING.md. Transitive dep versions are frozen via
# Cargo.lock (committed).

[dependencies]
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = { version = "=1.0.133", features = ["preserve_order"] }
sha2 = "=0.10.9"
tokio = { version = "=1.41.1", features = ["rt-multi-thread", "macros", "sync", "fs", "io-util"] }
async-trait = "=0.1.89"
rusqlite = { version = "=0.32.1", features = ["bundled"] }
thiserror = "=2.0.18"
rand = "=0.8.6"
rand_distr = "=0.4.3"
statrs = "=0.17.1"
tracing = "=0.1.41"
unicode-normalization = "=0.1.24"
pyo3 = { version = "=0.22.6", features = ["abi3-py311"], optional = true }
pythonize = { version = "=0.22.0", optional = true }

[dev-dependencies]
insta = { version = "=1.41.1", features = ["yaml", "json"] }
tempfile = "=3.14.0"
proptest = "=1.6.0"
tokio = { version = "=1.41.1", features = ["rt-multi-thread", "macros", "test-util", "time"] }
