[package]
# Crate is published to crates.io as `shadow-diff` so all three SDKs
# (PyPI, npm, crates.io) share one user-facing name. The internal Rust
# library name stays `shadow_core` (see `[lib] name` below) so existing
# `use shadow_core::...` import paths in the codebase keep compiling
# unchanged.
name = "shadow-diff"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Behavior contracts for AI agents — tested in your PR, enforced at runtime. Core engine: parser, writer, content-addressed store, replay, and nine-axis behavioral differ."
documentation = "https://docs.rs/shadow-diff"
# Point at the workspace-root README via a relative path (cargo resolves
# `readme` relative to the crate's Cargo.toml, not the workspace root).
readme = "../../README.md"
# Allowlist keeps the published crate small and reproducible. Anything
# not listed is excluded from `cargo publish`.
include = [
    "src/**/*.rs",
    # SQLite schema files are referenced via `include_str!()` from the
    # compiled code, so `cargo package` must bundle them too or the
    # published crate fails to compile.
    "src/**/*.sql",
    "Cargo.toml",
    "LICENSE-APACHE",
]

[package.metadata.docs.rs]
features = ["python"]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "shadow_core"
crate-type = ["cdylib", "rlib"]

[features]
default = []
# `python` makes the `pyo3` crate available to shadow-core so the
# PyO3-facing code in `src/python.rs` compiles. It does NOT activate
# `extension-module`, which means `cargo test --features python` links
# libpython normally and runs as a regular test binary.
python = ["dep:pyo3", "dep:pythonize"]
# `extension` is kept as an alias of `python` for backwards-compat —
# old maturin invocations still pass `--features extension`.
#
# The `pyo3/extension-module` flag (which omits libpython link
# directives so the resulting cdylib loads cleanly into a Python
# interpreter) is intentionally NOT propagated here. Including it
# would make `cargo test --workspace --all-features` fail to link
# the test binary on every platform that doesn't pre-link libpython
# into the test process. Maturin enables `pyo3/extension-module`
# directly via `[tool.maturin] features = [...]` in
# `python/pyproject.toml`, so wheel builds are unaffected by this
# split.
extension = ["python"]

# Direct deps use exact (`=x.y.z`) pins per the "pin to exact versions"
# constraint in CONTRIBUTING.md. Transitive dep versions are frozen via
# Cargo.lock (committed).

[dependencies]
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = { version = "=1.0.133", features = ["preserve_order"] }
sha2 = "=0.10.9"
tokio = { version = "=1.52.1", features = ["rt-multi-thread", "macros", "sync", "fs", "io-util"] }
async-trait = "=0.1.89"
rusqlite = { version = "=0.32.1", features = ["bundled"] }
thiserror = "=2.0.18"
rand = "=0.8.6"
rand_distr = "=0.4.3"
statrs = "=0.18.0"
tracing = "=0.1.41"
unicode-normalization = "=0.1.24"
pyo3 = { version = "=0.24.2", features = ["abi3-py311"], optional = true }
pythonize = { version = "=0.24.0", optional = true }

[dev-dependencies]
insta = { version = "=1.41.1", features = ["yaml", "json"] }
tempfile = "=3.14.0"
proptest = "=1.6.0"
tokio = { version = "=1.52.1", features = ["rt-multi-thread", "macros", "test-util", "time"] }
