[package]
name = "shadow-align-napi"
version = "3.0.7"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi4"] }
napi-derive = "3"
serde_json = "1.0"
shadow-align = { path = "../../crates/shadow-align" }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
